--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@iconify-json/fluent": "^1.2.31",
+    "@iconify/react": "^6.0.2",
     "csvsync": "1.3.3",
     "lightweight-charts": "^5.0.8",
     "next": "15.5.3",
