--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@iconify-json/fluent": "^1.2.31",
     "@iconify/react": "^6.0.2",
+    "chart.js": "^4.5.0",
     "csvsync": "1.3.3",
     "lightweight-charts": "^5.0.8",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
